--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <meta name="description" content="This is the solution for the QR code component challenge on Frontend Mentor"
+  <meta name="description" content="This is the solution for the QR code component challenge on Frontend Mentor">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
